fixed text-align to left for color picker

--- a/src/bs.css
+++ b/src/bs.css
@@ -564,3 +564,7 @@ a {
 .margin-bottom-10 {
   margin-bottom: 10px;
 }
+
+.text-left {
+  text-align: left;
+}
